--- a/cfg/TebLocalPlannerReconfigure.cfg
+++ b/cfg/TebLocalPlannerReconfigure.cfg
@@ -267,6 +267,10 @@ gen.add("max_number_classes",    int_t,    0,
 	"Specify the maximum number of allowed alternative homotopy classes (limits computational effort)", 
 	5, 1, 100)
 
+gen.add("max_number_plans_in_current_class",    int_t,    0,
+	"Specify the maximum number of trajectories to try that are in the same homotopy class as the current trajectory (helps avoid local minima)", 
+	1, 1, 10)
+
 gen.add("selection_cost_hysteresis", double_t, 0, 
   "Specify how much trajectory cost must a new candidate have w.r.t. a previously selected trajectory in order to be selected (selection if new_cost < old_cost*factor)", 
   1.0, 0, 2) 
