SQUASHME: Redo and finish pruneTebs()

--- a/cfg/TebLocalPlannerReconfigure.cfg
+++ b/cfg/TebLocalPlannerReconfigure.cfg
@@ -268,7 +268,7 @@ gen.add("max_number_classes",    int_t,    0,
 	5, 1, 100)
 
 gen.add("max_number_plans_in_current_class",    int_t,    0,
-	"Specify the maximum number of trajectories to try that are in the same homotopy class as the current trajectory (helps avoid local minima)", 
+	"Specify the maximum number of trajectories to try that are in the same homotopy class as the current trajectory (helps avoid local minima)",
 	1, 1, 10)
 
 gen.add("selection_cost_hysteresis", double_t, 0, 
@@ -291,6 +291,10 @@ gen.add("selection_viapoint_cost_scale", double_t, 0,
 gen.add("selection_alternative_time_cost",   bool_t,   0, 
   "If true, time cost is replaced by the total transition time.", 
   False)
+
+gen.add("selection_pruning_probability", double_t, 0,
+  "At each planning cycle, TEBs other than the current 'best' one will be randomly dropped with this probability. Prevents becoming 'fixated' on sub-optimal alternative homotopies.", 
+  0.3, 0, 1)
 
 gen.add("roadmap_graph_no_samples",    int_t,    0,
 	"Specify the number of samples generated for creating the roadmap graph, if simple_exploration is turend off", 
