Make all trajectory parameters dynamic reconfigurable
The code handles on-the-fly changes to these parameters just like all
the others, so go ahead and make them dynamic:

* min_samples
* max_samples
* global_plan_prune_distance
* min_resolution_collision_check_angular
* control_look_ahead_poses

This is in preparation for adding a new parameter related to the last
one in this list. It would be awkward for it to by dynamic while this is
not.

--- a/cfg/TebLocalPlannerReconfigure.cfg
+++ b/cfg/TebLocalPlannerReconfigure.cfg
@@ -1,5 +1,6 @@
 #!/usr/bin/env python
 
+import math
 from dynamic_reconfigure.parameter_generator_catkin import *
 #from local_planner_limits import add_generic_localplanner_params
 
@@ -30,6 +31,14 @@ grp_trajectory.add("dt_hysteresis", double_t, 0,
 	"Hysteresis that is utilized for automatic resizing depending on the current temporal resolution (dt): usually 10% of dt_ref",
 	0.1, 0.002,  0.5)
 
+grp_trajectory.add("min_samples", int_t, 0,
+	"Minimum number of samples (should be always greater than 2)",
+	3, 3, 10000)
+
+grp_trajectory.add("max_samples", int_t, 0,
+	"Maximum number of samples; Warning: if too small the discretization/resolution might not be sufficient for the given robot model or obstacle avoidance does not work anymore.",
+	500, 3, 10000)
+
 grp_trajectory.add("global_plan_overwrite_orientation",   bool_t,   0,
 	"Some global planners are not considering the orientation at local subgoals between start and global goal, therefore determine it automatically",
 	True)
@@ -41,7 +50,11 @@ grp_trajectory.add("allow_init_with_backwards_motion",   bool_t,   0,
 grp_trajectory.add("max_global_plan_lookahead_dist",   double_t,   0,
   "Specify maximum length (cumulative Euclidean distances) of the subset of the global plan taken into account for optimization [if 0 or negative: disabled; the length is also bounded by the local costmap size]",
   3.0, 0, 50.0) 
-	
+
+grp_trajectory.add("global_plan_prune_distance",   double_t,   0,
+  "Distance between robot and via_points of global plan which is used for pruning",
+  1.0, 0.01, 50.0)
+
 grp_trajectory.add("force_reinit_new_goal_dist",   double_t,   0,
 	"Force the planner to reinitialize the trajectory if a previous goal is updated with a seperation of more than the specified value in meters (skip hot-starting)",
 	1.0, 0.0, 10.0)	
@@ -57,6 +70,14 @@ grp_trajectory.add("exact_arc_length",   bool_t,   0,
 grp_trajectory.add("publish_feedback",   bool_t,   0,
   "Publish planner feedback containing the full trajectory and a list of active obstacles (should be enabled only for evaluation or debugging purposes)",
   False)    
+
+grp_trajectory.add("min_resolution_collision_check_angular",   double_t,   0,
+  "Min angular resolution used during the costmap collision check. If not respected, intermediate samples are added. [rad]",
+  math.pi, 0.0, math.pi)
+
+grp_trajectory.add("control_look_ahead_poses",   int_t,   0,
+  "Index of the pose used to extract the velocity command",
+  1, 1, 20)
 
 grp_trajectory.add("visualize_with_time_as_z_axis_scale",    double_t,   0,
   "If this value is bigger than 0, the trajectory and obstacles are visualized in 3d using the time as the z-axis scaled by this value. Most useful for dynamic obstacles.",
