add option to use costmap 3D
Add option to use costmap 3D for feasability checks and to replace
obstacles with one graph edge to query the distance to the neareast
obstacle from the 3D costmap.

--- a/cfg/TebLocalPlannerReconfigure.cfg
+++ b/cfg/TebLocalPlannerReconfigure.cfg
@@ -243,6 +243,26 @@ gen.add("weight_dynamic_obstacle_inflation", double_t, 0,
         "Optimization weight for the inflation penalty of dynamic obstacles (should be small)",
         0.1, 0, 10)
 
+gen.add("weight_costmap_3d", double_t, 0,
+	"An over-all weighting of the costmap 3d error with the other error functions.",
+	0.01, 0, 100)
+
+gen.add("weight_costmap_3d_linear", double_t, 0,
+	"How much to weight the linear component of the error. This is also the amount of linear error at a distance of 0.",
+	5, 0, 100)
+
+gen.add("weight_costmap_3d_linear_slope", double_t, 0,
+	"Slope of decline per meter. So if you want the linear error to be 0 after 2 meters assign this 0.5.",
+	0.2, 0, 100)
+
+gen.add("weight_costmap_3d_exponential", double_t, 0,
+	"How much to weight the exponential component of the error. This is K where ErrorExp = K * e^(-(x-S)).",
+	1, 0, 100)
+
+gen.add("weight_costmap_3d_exponential_shift", double_t, 0,
+	"How much to shift the exponential function on the x-axis. This is S where ErrorExp = K * e^(-(x-S)). This is useful for moving the steep slope of the exponent closer to the collision point.",
+	1, 0, 10)
+
 gen.add("weight_viapoint", double_t, 0, 
   "Optimization weight for minimizing the distance to via-points", 
   1, 0, 1000) 
