Add parameters to configure new control law

--- a/cfg/TebLocalPlannerReconfigure.cfg
+++ b/cfg/TebLocalPlannerReconfigure.cfg
@@ -116,10 +116,31 @@ grp_robot.add("acc_lim_x", double_t, 0,
 grp_robot.add("acc_lim_theta", double_t, 0,
 	"Maximum angular acceleration of the robot", 
 	0.5, 0.01, 100)  
- 
+
 grp_robot.add("is_footprint_dynamic",   bool_t,   0,
   "If true, updated the footprint before checking trajectory feasibility",
   False)
+
+grp_control = gen.add_group("Control", type="tab")
+grp_control.add("carrot_dt", double_t, 0,
+  "(seconds) Look this many seconds ahead of the robot on the plan to choose a carrot pose for control law",
+  0.4, 0.0, 10.0)
+
+grp_control.add("carrot_min_dist", double_t, 0,
+  "(meters) If carrot pose is closer than this minimum distance, teporarily increase carrot_dt until it is is this far away (or we reach end of plan)",
+  0.04, 0.0, 1.0)
+
+grp_control.add("turn_in_place_goal_dist", double_t, 0,
+  "(meters) When robot is within the minimum of this distance and the xy_goal_tolerance, switch to turn-in-place control law to finish the goal. Must be greater than zero, else may never terminate.",
+  10.0, 0.001, 10.0)
+
+grp_control.add("turn_in_place_Kp", double_t, 0,
+  "Proportional gain when turning in place",
+  1.0, 0.0, 10.0)
+
+grp_control.add("turn_in_place_min_vel_theta", double_t, 0,
+  "(rad/s) Min rotation speed when turning in place. In case motors have a minimum speed",
+  0.0, 0.0, 1.0)
 
 # Robot/Carlike
 
