add optional left-right obstacle inflation edges
Add ability to optionally add left-right inflation edges to one or
more of the pose verteces. The left-right edges are inflation-only
edges where only obstacles to the left or right are taken into
account. The starting and stopping pose vertex are configurable, as
is the pose skip for adding edges. Also, the left and right exponents
and inflation distances are separate so an asymetry can be created
that is useful to cause the base to navigate on one side or other of
a corridor or aisle.

Currently this is only implemented when using Costmap3D.

--- a/cfg/TebLocalPlannerReconfigure.cfg
+++ b/cfg/TebLocalPlannerReconfigure.cfg
@@ -196,6 +196,24 @@ grp_obstacles.add("inflation_dist", double_t, 0,
         "Buffer zone around obstacles with non-zero penalty costs (should be larger than min_obstacle_dist in order to take effect)",
         0.6, 0, 15)
 
+grp_obstacles.add("left_inflation_dist", double_t, 0,
+        "Buffer zone around obstacles to the left of the pose with non-zero penalty costs "
+        "(should be larger than min_obstacle_dist in order to take effect). "
+        "Setting the left/right inflation to different values allows a preference to driving on one side of a hallway. "
+        "Note that setting this currently only works with Costmap3D queries, "
+        "and causes two additional query edges to be added to the graph for "
+        "left/right for the poses allowed by first_left_right_pose and last_left_right_pose.",
+        0.0, 0, 15)
+
+grp_obstacles.add("right_inflation_dist", double_t, 0,
+        "Buffer zone around obstacles to the right of the pose with non-zero penalty costs "
+        "(should be larger than min_obstacle_dist in order to take effect). "
+        "Setting the left/right inflation to different values allows a preference to driving on one side of a hallway. "
+        "Note that setting this currently only works with Costmap3D queries, "
+        "and causes two additional query edges to be added to the graph for "
+        "left/right for the poses allowed by first_left_right_pose and last_left_right_pose.",
+        0.0, 0, 15)
+
 grp_obstacles.add("dynamic_obstacle_inflation_dist", double_t, 0,
         "Buffer zone around predicted locations of dynamic obstacles with non-zero penalty costs (should be larger than min_obstacle_dist in order to take effect)",
         0.6, 0, 15)
@@ -227,6 +245,24 @@ grp_obstacles.add("costmap_obstacles_behind_robot_dist",   double_t,   0,
 grp_obstacles.add("obstacle_poses_affected",    int_t,    0, 
 	"The obstacle position is attached to the closest pose on the trajectory to reduce computational effort, but take a number of neighbors into account as well", 
 	30, 0, 200)
+
+grp_obstacles.add("first_left_right_pose", int_t, 0,
+	"First pose index on which to add left/right obstacle edges. "
+        "This helps reduce CPU load when in costmap 3D mode, "
+        "as left/right queries are more expensive.",
+	0, 0, 100)
+
+grp_obstacles.add("last_left_right_pose", int_t, 0,
+	"Last pose index on which to add left/right obstacle edges. "
+        "This helps reduce CPU load when in costmap 3D mode, "
+        "as left/right queries are more expensive.",
+	0, 0, 100)
+
+grp_obstacles.add("left_right_skip_poses", int_t, 0,
+	"Skip this many poses between adding left/right edges. "
+        "This helps reduce CPU load when in costmap 3D mode, "
+        "as left/right queries are more expensive.",
+	0, 0, 20)
 	
 
 # Optimization
@@ -326,6 +362,18 @@ grp_optimization.add("obstacle_cost_exponent", double_t, 0,
 
 grp_optimization.add("inflation_cost_exponent", double_t, 0,
 	"Exponent for nonlinear obstacle inflation cost (cost = inflation_dist * pow([fraction of possible inflation_cost], inflation_cost_exponent)). Set to 1 to disable nonlinear cost (default)",
+	1, 0.01, 100)
+
+grp_optimization.add("weight_left_right_inflation", double_t, 0,
+        "Optimization weight for the left/right inflation penalty (should be small)",
+        1.0, 0, 100)
+
+grp_optimization.add("left_inflation_cost_exponent", double_t, 0,
+	"Exponent for nonlinear left obstacle inflation cost (cost = left_inflation_dist * pow([fraction of possible inflation_cost], left_inflation_cost_exponent)). Set to 1 to disable nonlinear cost (default)",
+	1, 0.01, 100)
+
+grp_optimization.add("right_inflation_cost_exponent", double_t, 0,
+	"Exponent for nonlinear right obstacle inflation cost (cost = right_inflation_dist * pow([fraction of possible inflation_cost], right_inflation_cost_exponent)). Set to 1 to disable nonlinear cost (default)",
 	1, 0.01, 100)
   
   
