Preadjust 5/5: Add parameters for preadjust_goal_recovery

--- a/cfg/TebLocalPlannerReconfigure.cfg
+++ b/cfg/TebLocalPlannerReconfigure.cfg
@@ -417,4 +417,40 @@ grp_recovery.add("oscillation_recovery",   bool_t,   0,
   "Try to detect and resolve oscillations between multiple solutions in the same equivalence class (robot frequently switches between left/right/forward/backwards).",
   True) 
   
+grp_recovery.add("enable_preadjust_goal_if_blocked",   bool_t,   0,
+  "Adjust the goal if it is in conflict with an obstacle. It is allowed to move but its theta remains fixed. Affects both intermediate (horizon) goal and final goal.",
+  False)
+
+grp_recovery.add("preadjust_weight_nominal_goal",   double_t,   0,
+  "Optimzer weight of the via point to attract the the preadjusted goal to the nominal goal.",
+  2.0, 0.0, 1000.0)
+
+grp_recovery.add("preadjust_weight_obstacle",   double_t,   0,
+  "Optimzer weight of obstacles when preadjusting a blocked goal",
+  10.0, 0.0, 1000.0)
+
+grp_recovery.add("preadjust_xy_tolerance",   double_t,   0,
+  "Fail if unable to find a non-conflicting goal within this distance of the nominal goal",
+  0.50, 0.0, 10.0)
+
+grp_recovery.add("preadjust_stability_nominal_goal_change_dist",   double_t,   0,
+  "Consider the nominal goal to change when it has moved this far, so drop the cached previous adjusted goal. This tolerance allows for small noise from localizer.",
+  0.05, 0.0, 10.0)
+
+grp_recovery.add("preadjust_stability_keep_using_nominal_goal_obst_dist",   double_t,   0,
+  "If we used the nominal goal last cycle, keep doing so unless it is closer than this limit to an obstacle. (i.e. transition from clear to blocked)",
+  0.03, 0.0, 10.0)
+
+grp_recovery.add("preadjust_stability_always_nominal_goal_obst_dist",   double_t,   0,
+  "Always use the nominal goal if it is at least this far from an obstacle. (causes transition from blocked to clear)",
+  0.15, 0.0, 10.0)
+
+grp_recovery.add("preadjust_stability_prev_adjusted_goal_min_obst_dist",   double_t,   0,
+  "Use prev adjusted goal if it is between ..._min_obst_dist and ..._max_obst_dist (and we determined not to just use the nominal goal)",
+  0.03, 0.0, 10.0)
+
+grp_recovery.add("preadjust_stability_prev_adjusted_goal_max_obst_dist",   double_t,   0,
+  "Use prev adjusted goal if it is between ..._min_obst_dist and ..._max_obst_dist (and we determined not to just use the nominal goal)",
+  0.30, 0.0, 10.0)
+
 exit(gen.generate("teb_local_planner", "teb_local_planner", "TebLocalPlannerReconfigure"))
