add edges for nonlethal obstacles
Costmaps can track obstacles that are inbetween the cost of free
space and lethal space. This can be useful when an object is detected,
such as a cord on the floor or a mat, that can be safely navigated,
but is better to be avoided if possible.

Add options to add edges for non-lethal obstacles. Add edge types
for Costmap3D, where querying the distance to only non-lethal obstacles
is possible.

--- a/cfg/TebLocalPlannerReconfigure.cfg
+++ b/cfg/TebLocalPlannerReconfigure.cfg
@@ -265,6 +265,10 @@ grp_obstacles.add("left_right_skip_poses", int_t, 0,
         "This helps reduce CPU load when in costmap 3D mode, "
         "as left/right queries are more expensive.",
         0, 0, 20)
+
+grp_obstacles.add("min_nonlethal_obstacle_dist", double_t, 0,
+	"Minimum desired separation from non-lethal obstacles",
+	0.1, 0, 10)
 	
 
 # Optimization
@@ -376,6 +380,14 @@ grp_optimization.add("left_inflation_cost_exponent", double_t, 0,
 
 grp_optimization.add("right_inflation_cost_exponent", double_t, 0,
         "Exponent for nonlinear right obstacle inflation cost (cost = right_inflation_dist * pow([fraction of possible inflation_cost], right_inflation_cost_exponent)). Set to 1 to disable nonlinear cost (default)",
+        1, 0.01, 100)
+
+grp_optimization.add("weight_nonlethal_obstacle", double_t, 0,
+        "Optimization weight for a seprataion from non-lethal obstacles (0 to disable)",
+        1, 0, 100)
+
+grp_optimization.add("nonlethal_obstacle_cost_exponent", double_t, 0,
+        "Exponent for nonlinear, non-lethal obstacle cost",
         1, 0.01, 100)
   
   
