control law: add min angle, general turn-in-place
The previous implementation of the control law special cased a
rotation in place when near the goal, and looked ahead on the path
until the carrot was at least carrot_min_dist away. However, if the
path contains a spiral such that the pose min_carrot_dist away is
significantly different in orientation than the current orientation
the control law poorly follows the plan, sometimes turning the wrong
way.

Deal with this by generalizing the turn-in-place control to activate
any time the carrot pose is too close to the robot pose. Prevent
under-achieving on rotation by projecting forward in time if the
carrot pose is within both a minimum distance and a minimum angle.
Limiting by both distance and angle prevents projecting forward so
far that the angle changes wildly.

When turning in place, if the carrot pose is not at the goal, simply
issue the direct rotational velocity to follow the rotation in the
plan. If the carrot pose is at the goal, use the P controller to
prevent over-shooting the goal.

--- a/cfg/TebLocalPlannerReconfigure.cfg
+++ b/cfg/TebLocalPlannerReconfigure.cfg
@@ -127,12 +127,16 @@ grp_control.add("carrot_dt", double_t, 0,
   0.4, 0.0, 10.0)
 
 grp_control.add("carrot_min_dist", double_t, 0,
-  "(meters) If carrot pose is closer than this minimum distance, teporarily increase carrot_dt until it is is this far away (or we reach end of plan)",
+  "(meters) If carrot pose is closer than this minimum distance and carrot_min_angle, temporarily increase carrot_dt until it is is this far away or we reach min_carrot_angle (or end of plan)",
   0.04, 0.0, 1.0)
 
-grp_control.add("turn_in_place_goal_dist", double_t, 0,
-  "(meters) When robot is within the minimum of this distance and the xy_goal_tolerance, switch to turn-in-place control law to finish the goal. Must be greater than zero, else may never terminate.",
-  10.0, 0.001, 10.0)
+grp_control.add("carrot_min_angle", double_t, 0,
+  "(radians) If carrot pose is closer than this minimum angle and carrot_min_dist, temporarily increase carrot_dt until it is is this far away or we reach min_carrot_dist (or end of plan)",
+  0.2, 0.0, math.pi)
+
+grp_control.add("turn_in_place_dist", double_t, 0,
+  "(meters) When robot is within the minimum of this distance and the xy_goal_tolerance, switch to turn-in-place control law. Must be greater than zero, else may never terminate.",
+  0.04, 0.001, 10.0)
 
 grp_control.add("turn_in_place_Kp", double_t, 0,
   "Proportional gain when turning in place",
